tests/ui/deriving/do-not-suggest-calling-fn-in-derive-macro.stderr
error[E0369]: binary operation `==` cannot be applied to type `Rc<dyn Fn()>`
  --> $DIR/do-not-suggest-calling-fn-in-derive-macro.rs:5:5
   |
LL | #[derive(PartialEq)]
   |          --------- in this derive macro expansion
LL | pub struct Function {
LL |     callback: Rc<dyn Fn()>,
   |     ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `PartialEq` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0369`.
